# LIDAR-obstacles

./: CMakeLists.txt
find_obstacles/include/find_obstacles/: Map.hpp  core.hpp  utils.hpp
find_obstacles/src/: Map.cpp  main.cpp
pcd_files/: 1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
